--- a/app/design/adminhtml/default/clever/layout/local.xml
+++ b/app/design/adminhtml/default/clever/layout/local.xml
@@ -4,6 +4,18 @@
         <update handle="editor"/>
         <reference name="root">
             <action method="setTemplate"><template>cms/page/index.phtml</template></action>
+            <block type="adminhtml/cms_page_edit" name="content"
+                   template="cms/page/edit-container.phtml" />
+            <block type="adminhtml/cms_page_edit_tabs" name="cms_page_edit_tabs" template="widget/tabshoriz.phtml">
+                <block type="adminhtml/cms_page_edit_tab_main" name="cms_page_edit_tab_main" />
+                <block type="adminhtml/cms_page_edit_tab_content" name="cms_page_edit_tab_content" />
+                <block type="adminhtml/cms_page_edit_tab_design" name="cms_page_edit_tab_design" />
+                <block type="adminhtml/cms_page_edit_tab_meta" name="cms_page_edit_tab_meta" />
+                <action method="addTab"><name>main_section</name><block>cms_page_edit_tab_main</block></action>
+                <action method="addTab"><name>content_section</name><block>cms_page_edit_tab_content</block></action>
+                <action method="addTab"><name>design_section</name><block>cms_page_edit_tab_design</block></action>
+                <action method="addTab"><name>meta_section</name><block>cms_page_edit_tab_meta</block></action>
+            </block>
         </reference>
         <reference name="head">
             <action method="setCanLoadTinyMce"><flag>1</flag></action>
@@ -11,7 +23,6 @@
         <reference name="left">
             <block name="page.tree" type="jr_clevercms/adminhtml_cms_page_tree" template="cms/page/tree.phtml"/>
         </reference>
-        <remove name="content"/>
     </adminhtml_cms_page_index>
     
     <adminhtml_cms_page_edit>
