--- a/app/design/adminhtml/default/default/layout/jr_clevercms.xml
+++ b/app/design/adminhtml/default/default/layout/jr_clevercms.xml
@@ -3,9 +3,9 @@
 	<adminhtml_cms_page_index>
         <update handle="editor"/>
         <reference name="root">
-            <action method="setTemplate"><template>cms/page/index.phtml</template></action>
+            <action method="setTemplate"><template>clevercms/page/index.phtml</template></action>
             <block type="adminhtml/cms_page_edit" name="content"
-                   template="cms/page/edit-container.phtml" />
+                   template="clevercms/page/edit-container.phtml" />
             <block type="adminhtml/cms_page_edit_tabs" name="cms_page_edit_tabs" template="widget/tabshoriz.phtml">
                 <block type="adminhtml/cms_page_edit_tab_main" name="cms_page_edit_tab_main" />
                 <block type="adminhtml/cms_page_edit_tab_content" name="cms_page_edit_tab_content" />
@@ -21,7 +21,7 @@
             <action method="setCanLoadTinyMce"><flag>1</flag></action>
         </reference>
         <reference name="left">
-            <block name="page.tree" type="jr_clevercms/adminhtml_cms_page_tree" template="cms/page/tree.phtml"/>
+            <block name="page.tree" type="jr_clevercms/adminhtml_cms_page_tree" template="clevercms/page/tree.phtml"/>
         </reference>
     </adminhtml_cms_page_index>
     
@@ -37,7 +37,7 @@
             <action method="unsetChild"><child>cms_page_edit_tabs</child></action>
         </reference>
         <reference name="cms_page_edit">
-            <action method="setTemplate"><template>cms/page/edit-container.phtml</template></action>
+            <action method="setTemplate"><template>clevercms/page/edit-container.phtml</template></action>
         </reference>
     </adminhtml_cms_page_edit>
     
@@ -46,14 +46,14 @@
             <action method="setCanLoadExtJs"><flag>1</flag></action>
         </reference>
         <reference name="content">
-            <block type="adminhtml/template" name="cms_page_permissions" template="cms/page/permissions/index.phtml">
-                <block type="adminhtml/store_switcher" name="store_switcher" template="cms/page/store/switcher.phtml">
+            <block type="adminhtml/template" name="cms_page_permissions" template="clevercms/page/permissions/index.phtml">
+                <block type="adminhtml/store_switcher" name="store_switcher" template="clevercms/page/store/switcher.phtml">
                     <action method="setUseConfirm"><params>0</params></action>
                 </block>
-                <block type="jr_clevercms/adminhtml_customer_group_switcher" name="customer_group_switcher" template="customer/group/switcher.phtml">
+                <block type="jr_clevercms/adminhtml_customer_group_switcher" name="customer_group_switcher" template="clevercms/customer/group/switcher.phtml">
                     <action method="setUseConfirm"><params>0</params></action>
                 </block>
-                <block type="jr_clevercms/adminhtml_cms_page_permissions_tree" name="cms_page_permissions_tree" template="cms/page/permissions/tree.phtml"/>
+                <block type="jr_clevercms/adminhtml_cms_page_permissions_tree" name="cms_page_permissions_tree" template="clevercms/page/permissions/tree.phtml"/>
             </block>
         </reference>
     </adminhtml_cms_page_permissions_index>
