--- a/app/design/adminhtml/default/default/layout/jr_clevercms.xml
+++ b/app/design/adminhtml/default/default/layout/jr_clevercms.xml
@@ -6,16 +6,7 @@
             <action method="setTemplate"><template>clevercms/page/index.phtml</template></action>
             <block type="adminhtml/cms_page_edit" name="content"
                    template="clevercms/page/edit-container.phtml" />
-            <block type="adminhtml/cms_page_edit_tabs" name="cms_page_edit_tabs" template="widget/tabshoriz.phtml">
-                <block type="adminhtml/cms_page_edit_tab_main" name="cms_page_edit_tab_main" />
-                <block type="adminhtml/cms_page_edit_tab_content" name="cms_page_edit_tab_content" />
-                <block type="adminhtml/cms_page_edit_tab_design" name="cms_page_edit_tab_design" />
-                <block type="adminhtml/cms_page_edit_tab_meta" name="cms_page_edit_tab_meta" />
-                <action method="addTab"><name>main_section</name><block>cms_page_edit_tab_main</block></action>
-                <action method="addTab"><name>content_section</name><block>cms_page_edit_tab_content</block></action>
-                <action method="addTab"><name>design_section</name><block>cms_page_edit_tab_design</block></action>
-                <action method="addTab"><name>meta_section</name><block>cms_page_edit_tab_meta</block></action>
-            </block>
+            <block type="jr_clevercms/adminhtml_cms_page_edit_tabs" name="cms_page_edit_store_tabs" template="widget/tabs.phtml" />
         </reference>
         <reference name="head">
             <action method="setCanLoadTinyMce"><flag>1</flag></action>
@@ -24,11 +15,14 @@
             <block name="page.tree" type="jr_clevercms/adminhtml_cms_page_tree" template="clevercms/page/tree.phtml"/>
         </reference>
     </adminhtml_cms_page_index>
-    
+
     <adminhtml_cms_page_edit>
         <update handle="editor"/>
         <reference name="head">
             <action method="setCanLoadTinyMce"><flag>1</flag></action>
+        </reference>
+        <reference name="root">
+            <block type="jr_clevercms/adminhtml_cms_page_edit_tabs" name="cms_page_edit_store_tabs" template="widget/tabs.phtml" />
         </reference>
         <reference name="cms_page_edit_tabs">
             <action method="setTemplate"><template>widget/tabshoriz.phtml</template></action>
